recursion.cons.lessons.recursion.cons.Length.scala.error
length:3: error: 'case' expected but identifier found.
		a::b => 1 + length(b)
                ^length:4: error: '}' expected but ';' found.
		_    => 0
^length:8: error: eof expected but '}' found.
 }
 ^